--- a/Description
+++ b/Description
@@ -1,1 +1,3 @@
 So the Fourier Transfrom is  a conversion of an entity from one domain to the other and in this case from the time domain to the frequency domain. 
+
+There is the fourier transfrom and the inverse fourier transfrom which is a reverse of the initial form.
